# zero2prod

./: .env.example  Cargo.toml  Dockerfile  Makefile  README.cn.md  README.md  configuration.yaml  tests_api.http
.github/workflows/: build.yml
configuration/: base.yaml  local.yaml  production.yaml
examples/: secrecy.rs
migrations/: 20220909130555_create_newsletter_table_first.sql  20220916072843_make_status_not_null_in_subscriptions.sql  20220919091917_create_subscription_tokens_table.sql  20220923030333_create_users_table.sql  20221004095705_seed_user.sql  20221005082746_create_idempotency_table.sql  20221005085103_relax_null_checks_on_idempotency.sql  20221005085817_create_newsletter_issues_table.sql  20221005085902_create_issue_delivery_queue_table.sql
scripts/: check_db.sh  init_db.sh  migrate.sh
src/: authentication.rs  configuration.rs  email_client.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
src/authentication/: middleware.rs  mod.rs
src/domain/: mod.rs  new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/idempotency/: key.rs  persistence.rs
src/routes/: health_check.rs  mod.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs  logout.rs  mod.rs
src/routes/admin/newsletter/: post.rs
src/routes/admin/password/: get.rs  mod.rs  post.rs
src/routes/home/: home.html
src/routes/login/: get.rs  login.html  post.rs
tests/: health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  docker.rs  health_check.rs  helpers.rs  login.rs  main.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
